...
        return 'DEBIT';
      case AccountType.cash:
        return 'CASH';
      case AccountType.credit:
        return 'CREDIT';
      case AccountType.debt:
        if (account.balance > 0) return 'OWES YOU';
        if (account.balance < 0) return 'YOU OWE';
        return 'SETTLED';
    }
  }
}

